--- a/index.html
+++ b/index.html
@@ -13,8 +13,30 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  
-
+  <header class="menu-bar">
+    <div class='container'>
+      <div class="row">
+        <div class="col-xl-2">
+          <a class="nav-brand" href="#">
+            <img class="logo" src="images/logo.png" alt="Logo">
+          </a>
+        </div>
+        <div class="col-xl-8 ml-auto align-self-center">
+          <nav>
+            <ul class="menu d-flex justify-content-end">
+              <li class="menu__item"><a href="#">Home</a></li>
+              <li class="menu__item"><a href="#">About</a></li>
+              <li class="menu__item"><a href="#">Servicing</a></li>
+              <li class="menu__item"><a href="#">Portfolio</a></li>
+              <li class="menu__item"><a href="#">Blog</a></li>
+              <li class="menu__item"><a href="#">Contact us</a></li>
+              <li class="menu__item"><i class="fas fa-search"></i></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>                
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
