--- a/index.html
+++ b/index.html
@@ -36,7 +36,60 @@
         </div>
       </div>
     </div>
-  </header>                
+  </header>
+  <header class="header">
+    <div class='container'>
+      <div class="row">
+        <div class="col-xl-12">
+          <h1 class="header__title">
+            Web development project
+          </h1>
+          <p class="header__text">
+            Very suitable to support all web development projects
+          </p>
+          <button class="button button_empty">our services</button>
+          <button class="button button_full">hire is now</button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="about">
+    <div class='container'>
+      <div class="row justify-content-center">
+        <div class="col-xl-8">
+          <h2 class="about__title title">
+            About Us
+          </h2>
+          <p class="about__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-around">
+        <div class="col-xl-3">
+          <img src="images/internet.png" alt="Internet">
+          <h3 class="about_h3">Awesome Icons</h3>
+          <p class="about__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+          </p>
+        </div>
+        <div class="col-xl-3">
+          <img src="images/transfer.png" alt="Transfer">
+          <h3 class="about_h3">One Page</h3>
+          <p class="about__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+          </p>
+        </div>
+        <div class="col-xl-3">
+          <img src="images/head.png" alt="Head">
+          <h3 class="about_h3">Fully Responsive</h3>
+          <p class="about__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>               
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
